// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginHeader should render as installed 1`] = `
<DocumentFragment>
  <div
    class="w-full bg-theme-background"
    data-testid="plugin-details__header"
  >
    <div
      class="flex w-full"
    >
      <img
        alt="Plugin"
        class="w-44 h-44 rounded-lg"
        src="placeholder.png"
      />
      <div
        class="flex flex-col justify-center pl-8 w-full"
      >
        <div
          class="flex justify-between items-center"
        >
          <div
            class="flex flex-col"
          >
            <span
              class="text-2xl font-bold"
            >
              ARK Explorer
            </span>
            <span
              class="text-medium text-theme-secondary-500"
            >
              Use the ARK Mainnet explorer directly within the wallet
            </span>
          </div>
          <div
            class="flex"
          >
            <button
              class="Button__StyledButton-mdtvtf-0 iSmMLw"
              data-testid="PluginHeader__button--open"
              type="button"
            >
              <div
                class="flex items-center space-x-2 relative"
              >
                Open
              </div>
            </button>
            <button
              class="Button__StyledButton-mdtvtf-0 iSmMLw ml-3"
              data-testid="PluginHeader__button--update"
              type="button"
            >
              <div
                class="flex items-center space-x-2 relative"
              >
                <div
                  class="sc-gsTCUz cXMmJt"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    update.svg
                  </svg>
                </div>
              </div>
            </button>
            <button
              class="Button__StyledButton-mdtvtf-0 lmPdYN ml-3"
              data-testid="PluginHeader__button--warning"
              type="button"
            >
              <div
                class="flex items-center space-x-2 relative"
              >
                <div
                  class="sc-gsTCUz fHxsLl"
                  height="20"
                  width="20"
                >
                  <svg>
                    report.svg
                  </svg>
                </div>
              </div>
            </button>
            <button
              class="Button__StyledButton-mdtvtf-0 lmPdYN ml-3"
              data-testid="PluginHeader__button--uninstall"
              type="button"
            >
              <div
                class="flex items-center space-x-2 relative"
              >
                <div
                  class="sc-gsTCUz cXMmJt"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    trash.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          class="grid grid-cols-5 grid-flow-col pt-8 mt-8 text-sm border-t border-dashed divide-x divide-theme-secondary-300 border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="flex"
          >
            <div
              class="flex flex-col"
            >
              <span
                class="font-bold text-theme-secondary-400"
              >
                Author
              </span>
              <div
                class="flex items-center"
              >
                <span
                  class="font-bold text-theme-secondary-600"
                >
                  ARK Ecosystem
                </span>
                <div
                  class="ml-3"
                >
                  <div
                    class="sc-gsTCUz cXMmJt"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      official-ark-plugin.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex px-6"
          >
            <div
              class="flex flex-col undefined"
            >
              <span
                class="font-bold text-theme-secondary-400"
              >
                Category
              </span>
              <span
                class="font-bold text-theme-secondary-600"
              >
                Utility
              </span>
            </div>
          </div>
          <div
            class="flex px-6 -ml-5"
          >
            <div
              class="flex flex-col"
            >
              <span
                class="font-bold text-theme-secondary-400"
              >
                URL
              </span>
              <span
                class="font-bold text-theme-primary-600"
              >
                github.com
              </span>
            </div>
          </div>
          <div
            class="flex col-span-2 justify-between px-6 -ml-8"
          >
            <div
              class="flex flex-col"
            >
              <span
                class="font-bold text-theme-secondary-400"
              >
                Rating
              </span>
              <div
                class="flex items-center"
              >
                <div
                  class="pr-1 text-theme-warning-400"
                >
                  <div
                    class="sc-gsTCUz cXMmJt"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      star.svg
                    </svg>
                  </div>
                </div>
                <span
                  class="font-bold text-theme-secondary-600"
                >
                  4.6
                </span>
              </div>
            </div>
            <div
              class="flex flex-col text-right"
            >
              <span
                class="font-bold text-theme-secondary-400"
              >
                Version
              </span>
              <span
                class="font-bold text-theme-secondary-600"
              >
                v.1.3.8
              </span>
            </div>
          </div>
          <div
            class="flex pl-6"
          >
            <div
              class="flex flex-col text-right"
            >
              <span
                class="font-bold text-theme-secondary-400"
              >
                Size
              </span>
              <span
                class="font-bold text-theme-secondary-600"
              >
                4.2 Mb
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PluginHeader should render properly 1`] = `
<DocumentFragment>
  <div
    class="w-full bg-theme-background"
    data-testid="plugin-details__header"
  >
    <div
      class="flex w-full"
    >
      <img
        alt="Plugin"
        class="w-44 h-44 rounded-lg"
        src="placeholder.png"
      />
      <div
        class="flex flex-col justify-center pl-8 w-full"
      >
        <div
          class="flex justify-between items-center"
        >
          <div
            class="flex flex-col"
          >
            <span
              class="text-2xl font-bold"
            >
              ARK Explorer
            </span>
            <span
              class="text-medium text-theme-secondary-500"
            >
              Use the ARK Mainnet explorer directly within the wallet
            </span>
          </div>
          <div
            class="flex"
          >
            <button
              class="Button__StyledButton-mdtvtf-0 iSmMLw"
              data-testid="PluginHeader__button--install"
              type="button"
            >
              <div
                class="flex items-center space-x-2 relative"
              >
                Install
              </div>
            </button>
            <button
              class="Button__StyledButton-mdtvtf-0 lmPdYN ml-3"
              data-testid="PluginHeader__button--warning"
              type="button"
            >
              <div
                class="flex items-center space-x-2 relative"
              >
                <div
                  class="sc-gsTCUz fHxsLl"
                  height="20"
                  width="20"
                >
                  <svg>
                    report.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          class="grid grid-cols-5 grid-flow-col pt-8 mt-8 text-sm border-t border-dashed divide-x divide-theme-secondary-300 border-theme-secondary-300 dark:border-theme-secondary-800"
        >
          <div
            class="flex"
          >
            <div
              class="flex flex-col"
            >
              <span
                class="font-bold text-theme-secondary-400"
              >
                Author
              </span>
              <div
                class="flex items-center"
              >
                <span
                  class="font-bold text-theme-secondary-600"
                >
                  ARK Ecosystem
                </span>
                <div
                  class="ml-3"
                >
                  <div
                    class="sc-gsTCUz cXMmJt"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      official-ark-plugin.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="flex px-6"
          >
            <div
              class="flex flex-col undefined"
            >
              <span
                class="font-bold text-theme-secondary-400"
              >
                Category
              </span>
              <span
                class="font-bold text-theme-secondary-600"
              >
                Utility
              </span>
            </div>
          </div>
          <div
            class="flex px-6 -ml-5"
          >
            <div
              class="flex flex-col"
            >
              <span
                class="font-bold text-theme-secondary-400"
              >
                URL
              </span>
              <span
                class="font-bold text-theme-primary-600"
              >
                github.com
              </span>
            </div>
          </div>
          <div
            class="flex col-span-2 justify-between px-6 -ml-8"
          >
            <div
              class="flex flex-col"
            >
              <span
                class="font-bold text-theme-secondary-400"
              >
                Rating
              </span>
              <div
                class="flex items-center"
              >
                <div
                  class="pr-1 text-theme-warning-400"
                >
                  <div
                    class="sc-gsTCUz cXMmJt"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      star.svg
                    </svg>
                  </div>
                </div>
                <span
                  class="font-bold text-theme-secondary-600"
                >
                  4.6
                </span>
              </div>
            </div>
            <div
              class="flex flex-col text-right"
            >
              <span
                class="font-bold text-theme-secondary-400"
              >
                Version
              </span>
              <span
                class="font-bold text-theme-secondary-600"
              >
                v.1.3.8
              </span>
            </div>
          </div>
          <div
            class="flex pl-6"
          >
            <div
              class="flex flex-col text-right"
            >
              <span
                class="font-bold text-theme-secondary-400"
              >
                Size
              </span>
              <span
                class="font-bold text-theme-secondary-600"
              >
                4.2 Mb
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
